kubernetes/argocd/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prowlarr
  name: prowlarr
  namespace: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: ghcr.io/hotio/prowlarr:latest
          ports:
          - name: prowlarr-tcp
            containerPort: 9696
            protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: prowlarr-pvc-config
