kubernetes/argocd/prowlarr/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: prowlarr-tcp
  namespace: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
  - port: 80
    targetPort: 9696
    name: prowlarr-tcp
    protocol: TCP
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: flaresolverr-tcp
  namespace: prowlarr
spec:
  selector:
    app: flaresolverr
  ports:
  - port: 80
    targetPort: 8191
    name: flaresolverr-tcp
    protocol: TCP
  type: ClusterIP
