kubernetes/argocd/prowlarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: prowlarr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-to-https@kubernetescrd
    cert-manager.io/cluster-issuer: star-home-neels-tech-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prowlarr.home.neels.tech`)
      services:
        - name: prowlarr-tcp
          port: 80
  tls:
    secretName: prowlarr-home-neels-tech-tls
